--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7978,3 +7978,39 @@ header .offcanvas-backdrop {
 }
 
 /*# sourceMappingURL=style.css.map */
+.metaMaskPopup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.popupContent {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 90%; /* Adjust the maximum width as needed */
+  width: 100%;
+}
+
+.popupContent h2 {
+  color: red;
+  margin-top: 0;
+}
+
+.popupContent p {
+  margin-bottom: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .popupContent {
+    max-width: 400px; /* Adjust for larger screens */
+  }
+}
